[package]
name = "rust_agent"
version = "0.1.0"
edition = "2021"
description = "A minimal Rust agent to learn how agents work"


[dependencies]
# HTTP client for LLM API calls
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# JSON parsing (serde)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Environment variables
dotenvy = "0.15"

# Colored output
colored = "2"

# For streaming
tokio-stream = "0.1"
futures = "0.3"

# CLI argument parsing (for dual-agent mode)
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
